src/components/PopoverContent/index.css
.get-in-touch {
    width: 100%;
    height: 30px;
    margin-top: 10px;
    background-color: #08a742;
    color: #fff;
    font-weight: 600
}

.close {
    width: 15%;
    float: right;
    height: 30px;
    margin-top: 10px;
    background-color: #ff5d58;
    color: #fff;
    font-weight: 600
}

.popover-text {
    font-size: 14px;
    text-align: center;
    margin: 5px;
}
.popover-text span {
    margin-top: 4px ;
}
.popover-line {
    width: 100%;
    height: 1px;
    background: black;
    margin-bottom: 5px;
}
.popover-container {
}

